--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "normalize-scss": "6.0.0",
     "normalize.css": "5.0.0"
   },
   "devDependencies": {
